--- a/latihan.html
+++ b/latihan.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOOTCAMP</title>
+    <title>DAILY</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is H1 Element</h1>
-    <h3>This is H3 element.</h3>
-    <p>This is a paragraph. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique officia doloremque, illum molestiae alias repellendus laborum sit. Repellat, dolorum quia nihil at, adipisci doloremque repudiandae incidunt est, commodi sed saepe!</p>
-    <p>This is also paragraph. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, ipsa? Vero velit quisquam eum facere non dignissimos qui quas alias dolores sit. Itaque incidunt voluptates iste atque laborum est iusto. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur magnam vitae amet eius nulla labore, explicabo obcaecati numquam molestiae non omnis quidem, quos dolorem asperiores, enim mollitia aut porro quod?.</p>
-    <a href="https://github.com/kristian-girsang/bootcamp1" target="_blank">This is a link.</a>
-    <a href="mailto:kristiangirsang007@gmail.com">Send email</a>
+    <h1 class="main-font">MY WEBSITE</h1>
+    <h3 class="main-font">This is H3 element.</h3>
+    <p class="secondary-font">This is a paragraph. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique officia doloremque, illum molestiae alias repellendus laborum sit. Repellat, dolorum quia nihil at, adipisci doloremque repudiandae incidunt est, commodi sed saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nam architecto beatae suscipit dicta. In iusto ab repellendus tempore quidem adipisci deserunt eius magnam, quam incidunt eaque molestias, accusantium necessitatibus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident harum quasi ex ullam. Accusamus consequatur, possimus nostrum earum repellendus odio repudiandae natus vel praesentium dolores vitae, omnis odit. Deserunt, libero? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid voluptatum est qui recusandae amet, aliquam voluptatem at sunt. Earum ex amet tempora fugiat consequuntur quae dolorum maxime optio repellat minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, distinctio quos a asperiores mollitia illum maxime corrupti. Natus maxime consequuntur porro, explicabo cupiditate sed voluptatem, quisquam eius perspiciatis quas totam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia numquam saepe id quibusdam, consectetur magni possimus quisquam nisi nihil reiciendis blanditiis illo maxime corrupti assumenda ea perspiciatis repudiandae quos? Beatae!</p>
+    <p class="secondary-font">This is also paragraph. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, ipsa? Vero velit quisquam eum facere non dignissimos qui quas alias dolores sit. Itaque incidunt voluptates iste atque laborum est iusto. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur magnam vitae amet eius nulla labore, explicabo obcaecati numquam molestiae non omnis quidem, quos dolorem asperiores, enim mollitia aut porro quod?.</p>
+    <a href="https://github.com/kristian-girsang" target="_blank">This is a basic link.</a>
+    <br>
+    <a href="mailto:kristiangirsang007@gmail.com">Email link</a>
+    <br>
+    <a href="latihan.html">
+        <img src="https://cdn.pixabay.com/photo/2014/06/03/19/38/road-sign-361514_960_720.png" alt="TEST IMAGE LINK" style="width:200px">
+    </a>
+    <br>
+    <a id="button" href="https://github.com/kristian-girsang" target="_blank">THIS IS A BUTTON</a>
 </body>
 </html>
+
