learn table, class, id, and div

--- a/latihan.html
+++ b/latihan.html
@@ -6,25 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAILY</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image" href="/calendar.svg">
+    <link rel="icon" type="image" href="assets/images/calendar.svg">
 </head>
 <body>
     <h1 class="main-font">MY WEBSITE</h1>
     <h3 class="main-font">This is H3 element.</h3>
-    <p class="secondary-font">This is a paragraph. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique officia doloremque, illum molestiae alias repellendus laborum sit. Repellat, dolorum quia nihil at, adipisci doloremque repudiandae incidunt est, commodi sed saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nam architecto beatae suscipit dicta. In iusto ab repellendus tempore quidem adipisci deserunt eius magnam, quam incidunt eaque molestias, accusantium necessitatibus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident harum quasi ex ullam. Accusamus consequatur, possimus nostrum earum repellendus odio repudiandae natus vel praesentium dolores vitae, omnis odit. Deserunt, libero? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid voluptatum est qui recusandae amet, aliquam voluptatem at sunt. Earum ex amet tempora fugiat consequuntur quae dolorum maxime optio repellat minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, distinctio quos a asperiores mollitia illum maxime corrupti. Natus maxime consequuntur porro, explicabo cupiditate sed voluptatem, quisquam eius perspiciatis quas totam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia numquam saepe id quibusdam, consectetur magni possimus quisquam nisi nihil reiciendis blanditiis illo maxime corrupti assumenda ea perspiciatis repudiandae quos? Beatae!</p>
-    <p class="secondary-font">This is also paragraph. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, ipsa? Vero velit quisquam eum facere non dignissimos qui quas alias dolores sit. Itaque incidunt voluptates iste atque laborum est iusto. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur magnam vitae amet eius nulla labore, explicabo obcaecati numquam molestiae non omnis quidem, quos dolorem asperiores, enim mollitia aut porro quod?.</p>
-    <p class="secondary-font">
-        <img src="https://cdn.pixabay.com/photo/2014/06/03/19/38/road-sign-361514_960_720.png" alt="TEST IMAGE" style="float:right; width: 200px;">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus cumque facere omnis numquam quam, fuga possimus ipsam perspiciatis nemo, eaque hic quis ut veritatis aliquid magnam reprehenderit reiciendis quia! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum tenetur autem reiciendis eveniet excepturi necessitatibus, iure, suscipit dolor maiores enim, dolores perferendis facilis quaerat nihil! Dolor dignissimos ex libero nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, suscipit quibusdam sit incidunt sequi facere tenetur doloribus laudantium sed ea, eos officiis delectus dolore molestias consectetur maiores quo fugiat sunt.</p>
-    <a href="https://github.com/kristian-girsang" target="_blank">This is a basic link.</a>
+    <div class="secondary">
+        <p>
+            This is also paragraph. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, ipsa? Vero velit quisquam eum facere non dignissimos qui quas alias dolores sit. Itaque incidunt voluptates iste atque laborum est iusto. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur magnam vitae amet eius nulla labore, explicabo obcaecati numquam molestiae non omnis quidem, quos dolorem asperiores, enim mollitia aut porro quod?.
+        </p>
+        <p>
+            <img src="https://cdn.pixabay.com/photo/2014/06/03/19/38/road-sign-361514_960_720.png" alt="TEST IMAGE" style="float:right; width: 200px;">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus cumque facere omnis numquam quam, fuga possimus ipsam perspiciatis nemo, eaque hic quis ut veritatis aliquid magnam reprehenderit reiciendis quia! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum tenetur autem reiciendis eveniet excepturi necessitatibus, iure, suscipit dolor maiores enim, dolores perferendis facilis quaerat nihil! Dolor dignissimos ex libero nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, suscipit quibusdam sit incidunt sequi facere tenetur doloribus laudantium sed ea, eos officiis delectus dolore molestias consectetur maiores quo fugiat sunt.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex iusto dolores provident ab nemo cum enim tenetur nisi odio itaque amet, omnis neque, asperiores in. Obcaecati debitis voluptatem impedit pariatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dolorem eius vitae sint porro exercitationem fugit itaque unde perspiciatis! Qui tenetur mollitia vel nihil optio harum obcaecati ab quaerat aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quibusdam in suscipit ad excepturi atque, dolore dolorum voluptatem inventore dolor reprehenderit delectus est aspernatur facere minima saepe illo repellat ducimus.
+        </p>
+    </div>
     <br>
-    <a href="mailto:kristiangirsang007@gmail.com">Email link</a>
-    <br>
-    <a href="https://github.com/kristian-girsang" target="_blank">
-        <img src="https://cdn.pixabay.com/photo/2014/06/03/19/38/road-sign-361514_960_720.png" alt="TEST IMAGE LINK" style="width:200px">
-    </a>
-    <br>
-    <a id="button" href="https://github.com/kristian-girsang" target="_blank">THIS IS A BUTTON</a>
+    <div>
+        <table>
+            <tbody>
+                <tr>
+                    <td>Email</td>
+                    <td><input type="email"/></td>
+                </tr>
+                <tr>
+                    <td>Password</td>
+                    <td><input type="password"></td>
+                </tr>
+                <tr>
+                    <td>Number</td>
+                    <td><input type="number"></td>
+                </tr>
+                <tr>
+                    <td>Date</td>
+                    <td><input type="date"></td>
+                </tr>
+                <tr>
+                    <td>Time</td>
+                    <td><input type="time"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="link-bawah">
+        <a href="https://github.com/kristian-girsang" target="_blank">This is a link.</a>
+        <br>
+        <a href="https://github.com/kristian-girsang" target="_blank">
+            <img src="https://cdn.pixabay.com/photo/2014/06/03/19/38/road-sign-361514_960_720.png" alt="TEST IMAGE LINK" style="width:200px">
+        </a>
+        <br>
+        <a id="button" href="https://github.com/kristian-girsang" target="_blank">THIS IS A BUTTON</a>
+    </div>
+        
 </body>
 </html>
 
