add simple javascript in a button

--- a/latihan.html
+++ b/latihan.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAILY</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image" href="assets/images/calendar.svg">
+    <link rel="icon" type="image" href="assets/images/icon.svg">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <h1 class="main-font">MY WEBSITE</h1>
@@ -59,7 +60,10 @@
         <br>
         <a id="button" href="https://github.com/kristian-girsang" target="_blank">THIS IS A BUTTON</a>
     </div>
-        
+    <div class="centered-item">
+        <button class="js-button secondary" onclick="greet()">Button with javascript</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
 
