--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image" href="assets/images/home.svg">
+    <link rel="icon" type="image" href="assets/images/info.svg">
 </head>
 <body>
     <h1 class="main-font">ABOUT ME</h1>
